--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="title_home">Home</string>
     <string name="title_favorites">Favorites</string>
     <string name="title_profile">Profile</string>
+    <string name="text_button_increase">Increase</string>
+    <string name="text_textview_counter">Current favorites number: %d</string>
 </resources>
